# duckhaven-clients

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  integration.yml  release.yml
ci/integration/: README.md  compose.sessions.yml  seed.py
