# Virtual workspace root for the DuckHaven client libraries.
# No [project] table: the root ships nothing to PyPI; each member under
# packages/* is its own independently-versioned, independently-published project.

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "build>=1.2",
    "twine>=5.1",
    # Installed so the optional-extra code paths (arrow, otel) are exercised in tests.
    "pyarrow>=15",
    "opentelemetry-api>=1.44.0",
    "opentelemetry-sdk>=1.36",
    # dbt's standard adapter conformance harness, for the dbt-duckhaven member.
    "dbt-tests-adapter>=1.10",
    # Renders the dbt-duckhaven macros in unit tests (present transitively via
    # dbt-common, pinned here so the render harness doesn't rely on a transitive dep).
    "jinja2>=3.1",
]

[tool.ruff]
line-length = 100
# The workspace floor; UP rules must not suggest idioms newer than this.
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["duckhaven_sql_connector"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
    "packages/duckhaven-sql-connector/tests/unit",
    "packages/dbt-duckhaven/tests/unit",
    "packages/dlt-duckhaven/tests/unit",
]
markers = [
    "integration: live tests against a real DuckHaven; opt-in via DUCKHAVEN_TEST_HOST.",
]

[tool.coverage.run]
branch = true
source = ["duckhaven_sql_connector", "dlt_duckhaven"]
omit = ["*/tests/*", "*/_version.py"]

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
